lib/tests/ui/invalid_iter_expr.stderr
error[E0277]: `{integer}` is not an iterator
 --> tests/ui/invalid_iter_expr.rs:3:1
  |
3 | #[test_casing(2, 5)]
  | ^^^^^^^^^^^^^^^^^^^^ `{integer}` is not an iterator
  |
  = help: the trait `Iterator` is not implemented for `{integer}`, which is required by `{integer}: IntoIterator`
  = note: if you want to iterate between `start` until a value `end`, use the exclusive range syntax `start..end` or the inclusive range syntax `start..=end`
  = note: required for `{integer}` to implement `IntoIterator`
  = note: this error originates in the attribute macro `test_casing` (in Nightly builds, run with -Z macro-backtrace for more info)
