lib/tests/ui/invalid_iter_expr.rs
use test_casing::test_casing;

#[test_casing(2, 5)]
fn tested_function(_arg: i32) {
    // Does nothing
}

fn main() {}
